--- a/Dashboard.html
+++ b/Dashboard.html
@@ -213,7 +213,7 @@
   function closeModal() { document.getElementById("activationModal").style.display = "none"; }
   function openHistory() { document.getElementById("historyModal").style.display = "flex"; }
   function closeHistory() { document.getElementById("historyModal").style.display = "none"; }
-  function openSupportChat() { window.location.href = "https://t.me/Coachnancy5?text=Hi%20STREAM_AFRICA"; }
+  function openSupportChat() { window.location.href = "https://t.me/m/lGU8z2FVZWY0"; }
 
   // Greeting & Name
   function updateGreeting() {
