--- a/activation.html
+++ b/activation.html
@@ -205,7 +205,7 @@
       <span class="acc-number" id="acc_no">0433866271</span>
       <i class="fa-solid fa-copy copy-icon" onclick="copyText()"></i>
     </div>
-    <div class="acc-holder">CHIKAMSO E. EJEH</div>
+    <div class="acc-holder">EMMANUEL C. EJEH</div>
     <div style="font-size: 11px; margin-top: 5px; color: #666;">STREAM OPERATING ACCOUNT</div>
   </div>
 
