--- a/activation.html
+++ b/activation.html
@@ -200,12 +200,12 @@
   </div>
 
   <div class="account-card">
-    <div class="bank-name">WEMA BANK PLC.</div>
+    <div class="bank-name">PALMPAY</div>
     <div class="acc-number-wrap">
-      <span class="acc-number" id="acc_no">0433866271</span>
+      <span class="acc-number" id="acc_no">7067738170</span>
       <i class="fa-solid fa-copy copy-icon" onclick="copyText()"></i>
     </div>
-    <div class="acc-holder">EMMANUEL C. EJEH</div>
+    <div class="acc-holder">JULIET C.  MARTINS</div>
     <div style="font-size: 11px; margin-top: 5px; color: #666;">STREAM OPERATING ACCOUNT</div>
   </div>
 
